<resources>
  <string name="app_name">OpenCode</string>
  <string name="expo_system_ui_user_interface_style" translatable="false">automatic</string>
  <string name="shortcut_new_session_short">New session</string>
  <string name="shortcut_new_session_long">Start a new session</string>
  <string name="shortcut_sessions_short">Sessions</string>
  <string name="shortcut_sessions_long">Open sessions list</string>
  <string name="shortcut_connect_short">Add connection</string>
  <string name="shortcut_connect_long">Add a server connection</string>
</resources>