<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
  <shortcut
      android:shortcutId="new_session"
      android:enabled="true"
      android:icon="@drawable/ic_shortcut_new_session"
      android:shortcutShortLabel="@string/shortcut_new_session_short"
      android:shortcutLongLabel="@string/shortcut_new_session_long">
    <intent
        android:action="android.intent.action.VIEW"
        android:data="opencode://new"
        android:targetPackage="com.involvex.opencodemobile"
        android:targetClass="com.involvex.opencodemobile.MainActivity" />
    <categories android:name="android.shortcut.creation" />
  </shortcut>
  <shortcut
      android:shortcutId="sessions"
      android:enabled="true"
      android:icon="@drawable/ic_shortcut_sessions"
      android:shortcutShortLabel="@string/shortcut_sessions_short"
      android:shortcutLongLabel="@string/shortcut_sessions_long">
    <intent
        android:action="android.intent.action.VIEW"
        android:data="opencode://sessions"
        android:targetPackage="com.involvex.opencodemobile"
        android:targetClass="com.involvex.opencodemobile.MainActivity" />
    <categories android:name="android.shortcut.list" />
  </shortcut>
  <shortcut
      android:shortcutId="add_connection"
      android:enabled="true"
      android:icon="@drawable/ic_shortcut_connect"
      android:shortcutShortLabel="@string/shortcut_connect_short"
      android:shortcutLongLabel="@string/shortcut_connect_long">
    <intent
        android:action="android.intent.action.VIEW"
        android:data="opencode://connect"
        android:targetPackage="com.involvex.opencodemobile"
        android:targetClass="com.involvex.opencodemobile.MainActivity" />
    <categories android:name="android.shortcut.creation" />
  </shortcut>
</shortcuts>
